<resources>
    <string name="app_name">Quiz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="wlc">Welcome\nto\nQuiz!!</string>
    <string name="title_activity_info">Info</string>
    <string name="name">Enter Name:- *</string>
    <string name="phone">Enter Phone:- *</string>
    <string name="email">Enter email:- *</string>
    <string name="header">Provide Information</string>
    <string name="start">Start QUIZ!!</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_answer">Answer</string>

</resources>
